# address-sanitizer

./: .gitignore  CMakeLists.txt  README.md
AddressSanitizer/: CMakeLists.txt
AddressSanitizer/Testing/: test.c  test.ll
AddressSanitizer/addressSan/: AddressSan.cpp  AddressSanPlugin.cpp  CMakeLists.txt
Testing/: out.ll  run.sh  test.c
Testing/LIT-Test/: lit.cfg.py  test_1.c  test_1.ll  test_2.c  test_2.ll
compiler-rt/lib/asan/: asan_report.cpp
include/: AddressSanitizer.h
lib/: AddressSanitizer.cpp  AddressSanitizerPlugin.cpp  CMakeLists.txt
llvm/lib/Passes/: StandardInstrumentations.cpp
scripts/: run.sh
